--- a/hwk2/hwk2.ipynb
+++ b/hwk2/hwk2.ipynb
@@ -200,7 +200,12 @@
     "Your documentation here.\n",
     "\"\"\"\n",
     "def pluralityVal(examples, values, target):\n",
-    "    raise NotImplementedError\n",
+         "frequencyStorage = []"
+         "for singleVal in values[target]:\n"
+         "frequencyStorage.append([singleVal,count(target,singleVal,examples)])\n"
+         "leaf = argmaxRandomTie(frequencyStorage, key = lambda x: x[1])\n"
+         "print(leaf.result)\n"
+
     "\n",
     "\n",
     "# Test for pluralityVal\n",
