--- a/hwk2/hwk2.ipynb
+++ b/hwk2/hwk2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,15 +195,16 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Your documentation here.\n",
+    "Return the value of the target attribute in the form of a leaf node containing the plurality value. \n",
     "\"\"\"\n",
     "def pluralityVal(examples, values, target):\n",
-         "frequencyStorage = []"
-         "for singleVal in values[target]:\n"
-         "frequencyStorage.append([singleVal,count(target,singleVal,examples)])\n"
-         "leaf = argmaxRandomTie(frequencyStorage, key = lambda x: x[1])\n"
-         "print(leaf.result)\n"
-
+    "\n",
+    "    frequencyStorage = [] #keeps track of each attribute value and how often they appear in the target attribute\n",
+    "    for singleVal in values[target]: #looping over attribute values\n",
+    "        frequencyStorage.append([singleVal,count(target,singleVal,examples)])\n",
+    "    findFrequency = argmaxRandomTie(frequencyStorage, key = lambda x: x[1])[0]\n",
+    "    leaf = DTLeaf(findFrequency) #create leaf node object\n",
+    "    return leaf\n",
     "\n",
     "\n",
     "# Test for pluralityVal\n",
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,8 +231,13 @@
     "Your documentation here.\n",
     "\"\"\"\n",
     "def allSameClass(examples, target):\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    trackValues = []\n",
+    "    for oneExample in examples:\n",
+    "        trackValues.append(oneExample[target])\n",
+    "    if(len(set(trackValues)) == 1):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "# Tests for allSameClass\n",
     "te = [[3,2,1], [1,0,1], [4,3,2], [3,0,0], [5,2,1]]\n",
